# mouth-synth

./: README.md
docs/: original-code-overview.md  python-port-plan.md
python_port/: README.md  main.py  pyproject.toml
python_port/mouth_synth/: __init__.py  __main__.py  app.py  config.py  face_tracker.py  sound.py  ui.py  video.py
