[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mouth-synth"
version = "0.1.0"
description = "Realtime lip-controlled synthesiser using OpenCV, MediaPipe, and Pygame."
readme = "README.md"
authors = [{ name = "Mouth Synth Maintainers" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "opencv-python",
  "mediapipe",
  "numpy",
  "pygame",
  "sounddevice",
]

[project.scripts]
mouth-synth = "mouth_synth.__main__:main"
